unpackaged/main/default/objects/Case/fields/Launch__c.field-meta.xml
<CustomField>
    <fullName>Launch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Launch</description>
    <label>Launch</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Launch selected is Closed.  Please select an Active Launch.</errorMessage>
        <filterItems>
            <field>Launch__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Launch__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>