unpackaged/main/default/objects/Case/fields/Launch_Part_s__c.field-meta.xml
<CustomField>
    <fullName>Launch_Part_s__c</fullName>
    <description>Used for Product Lanch Testing to indicated the Launch #&#39;s in Question</description>
    <label>Launch Part #&#39;s</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>