unpackaged/main/default/objects/Case/fields/Location_of_Error_Issue__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Error_Issue__c</fullName>
    <description>Location of Error/Issue for Product Launch</description>
    <label>Location of Error/Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Page</fullName>
            </value>
            <value>
                <fullName>Search Page</fullName>
            </value>
            <value>
                <fullName>Item Page</fullName>
            </value>
            <value>
                <fullName>Overview Tab</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Manuals Tab</fullName>
                <isActive>false</isActive>
                <label>Manuals Tab</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>