unpackaged/main/default/objects/Case/fields/Manual_Entry__c.field-meta.xml
<CustomField>
    <fullName>Manual_Entry__c</fullName>
    <description>Indicates that this Order should be not be Sent to Esker but manually entered.</description>
    <formula>Account.Manual_Entry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manual Entry</label>
    <type>Checkbox</type>
</CustomField>