unpackaged/main/default/objects/Case/fields/Manually_send_to_Esker__c.field-meta.xml
<CustomField>
    <fullName>Manually_send_to_Esker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually send to Esker</label>
    <type>Checkbox</type>
</CustomField>