unpackaged/main/default/objects/Case/fields/Network_Type__c.field-meta.xml
<CustomField>
    <fullName>Network_Type__c</fullName>
    <description>Network Type</description>
    <label>Network Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ethernet</fullName>
            </value>
            <value>
                <fullName>RS-232</fullName>
            </value>
            <value>
                <fullName>RS-485</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>