unpackaged/main/default/objects/Case/fields/Notify_Teamer__c.field-meta.xml
<CustomField>
    <fullName>Notify_Teamer__c</fullName>
    <description>Field to indicate that a specific Teamer may need to be aware of case</description>
    <formula>Contact.Forward_to_Teamer__r.FirstName  + &quot; &quot; + Contact.Forward_to_Teamer__r.LastName</formula>
    <label>Notify Teamer</label>
    <type>Text</type>
</CustomField>