unpackaged/main/default/objects/Case/fields/NPS_Response__c.field-meta.xml
<CustomField>
    <fullName>NPS_Response__c</fullName>
    <label>NPS Response</label>
    <length>50</length>
    <type>Text</type>
</CustomField>