unpackaged/main/default/objects/Case/fields/of_Related_Accounts_for_Contact__c.field-meta.xml
<CustomField>
    <fullName>of_Related_Accounts_for_Contact__c</fullName>
    <label># of Related Accounts for Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>