unpackaged/main/default/objects/Case/fields/OnlineCreditApplication__c.field-meta.xml
<CustomField>
    <fullName>OnlineCreditApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Credit Application</label>
    <referenceTo>forseva1__OnlineCreditApplication__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>