unpackaged/main/default/objects/Case/fields/Owned_by_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owned_by_Queue__c</fullName>
    <description>Set to TRUE if Case is owned by a Queue. Used for process builder flow.</description>
    <formula>IF(NOT(ISBLANK(Owner:Queue.QueueName)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owned by Queue</label>
    <type>Checkbox</type>
</CustomField>