unpackaged/main/default/objects/Case/fields/Owner_is_Me__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_Me__c</fullName>
    <formula>If( OwnerId = $User.Id, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is Me</label>
    <type>Checkbox</type>
</CustomField>