unpackaged/main/default/objects/Case/fields/Parent_Ticket_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket_Account__c</fullName>
    <formula>Parent.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Ticket Account</label>
    <type>Text</type>
</CustomField>