unpackaged/main/default/objects/Case/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Part Number</description>
    <inlineHelpText>Part Number or Product</inlineHelpText>
    <label>Part Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases (Part Number)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>