unpackaged/main/default/objects/Case/fields/Part_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Part_Number_Formula__c</fullName>
    <description>Part Number Name. Used for global search.</description>
    <formula>Part_Number__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Number Formula</label>
    <type>Text</type>
</CustomField>