unpackaged/main/default/objects/Case/fields/Phishing_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Phishing_Confirmed__c</fullName>
    <label>Phishing Confirmed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>