unpackaged/main/default/objects/Case/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Used for capture web to case information from community user.</description>
    <inlineHelpText>Community Case Phone</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>