unpackaged/main/default/objects/Case/fields/PLC_BE_Case_Information__c.field-meta.xml
<CustomField>
    <fullName>PLC_BE_Case_Information__c</fullName>
    <defaultValue>&quot;• Searching BE Cases, Knowledge Articles, Problem Reports and ECNs for information&quot; +BR()
&amp;&quot;• Part Number&quot; +BR()
&amp;&quot;• Detailed description of issue&quot; +BR()
&amp;&quot;• Software and Firmware version numbers&quot; +BR()
&amp;&quot;• If Communication problem: try just 1 read/write first.  INCLUDE status bits.  IF that works, add one at time to find breaking point.&quot; +BR()
&amp;&quot;• Obtain network topology diagram: even if simple hand drawing&quot; +BR()
&amp;&quot;• Error Code(s)&quot; +BR()
&amp;&quot;• Get PLC project&quot; +BR()
&amp;&quot;• Simplify the logic: Put the code not working at top of the ladder followed by END&quot; +BR()
&amp;&quot;• Try simple test project&quot; +BR()
&amp;&quot;• Have you duplicated problem?&quot; +BR()
&amp;&quot;• Ask other Techs and Tech Lead first&quot;</defaultValue>
    <label>PLC BE Case Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>