unpackaged/main/default/objects/Case/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Used in the Community to identify address of Community User.</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>