unpackaged/main/default/objects/Case/fields/Power_Supply__c.field-meta.xml
<CustomField>
    <fullName>Power_Supply__c</fullName>
    <description>Power Supply</description>
    <label>Power Supply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dedicated 24 VDC</fullName>
            </value>
            <value>
                <fullName>EA-AC</fullName>
            </value>
            <value>
                <fullName>Shared 24 VDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>