unpackaged/main/default/objects/Case/fields/Preferred_Callback_Number__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Callback_Number__c</fullName>
    <formula>TEXT(Contact.Preferred_Callback_Number__c)</formula>
    <label>Preferred Callback #</label>
    <type>Text</type>
</CustomField>