unpackaged/main/default/objects/Case/fields/Previous_Account__c.field-meta.xml
<CustomField>
    <fullName>Previous_Account__c</fullName>
    <formula>Contact.Previous_Account__c</formula>
    <label>Previous Account</label>
    <type>Text</type>
</CustomField>