unpackaged/main/default/objects/Case/fields/Previous_Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contact_Account__c</fullName>
    <label>Previous Contact Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>