unpackaged/main/default/objects/Case/fields/Previously_Closed__c.field-meta.xml
<CustomField>
    <fullName>Previously_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the Case was closed at any point time, this is special for Case for Esker Accounts that get automatically reopened through Code.</description>
    <label>Previously Closed?</label>
    <type>Checkbox</type>
</CustomField>