unpackaged/main/default/objects/Case/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Product Group used in Community.</description>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arduino</fullName>
            </value>
            <value>
                <fullName>Advanced Soft Starters</fullName>
            </value>
            <value>
                <fullName>Bar Code/Vision</fullName>
            </value>
            <value>
                <fullName>Basic Contactors/Starters</fullName>
            </value>
            <value>
                <fullName>BRX HSIO</fullName>
            </value>
            <value>
                <fullName>BRX PID</fullName>
            </value>
            <value>
                <fullName>Built in HSIO/05/06/CTRINT</fullName>
            </value>
            <value>
                <fullName>Circuit Breakers</fullName>
            </value>
            <value>
                <fullName>Click HSIO</fullName>
            </value>
            <value>
                <fullName>Click PID</fullName>
            </value>
            <value>
                <fullName>Click PLC Hardware</fullName>
            </value>
            <value>
                <fullName>Click Programming</fullName>
            </value>
            <value>
                <fullName>C-More</fullName>
            </value>
            <value>
                <fullName>C-More Micro</fullName>
            </value>
            <value>
                <fullName>Connection Systems</fullName>
            </value>
            <value>
                <fullName>Counter Timer Tachometer</fullName>
            </value>
            <value>
                <fullName>Custom Products</fullName>
            </value>
            <value>
                <fullName>D3/D4 counters</fullName>
            </value>
            <value>
                <fullName>DC Drives</fullName>
            </value>
            <value>
                <fullName>DDE/OPC</fullName>
            </value>
            <value>
                <fullName>DirectSoft</fullName>
            </value>
            <value>
                <fullName>Direct Touch Panels</fullName>
            </value>
            <value>
                <fullName>DL/CTRIO</fullName>
            </value>
            <value>
                <fullName>DL PID</fullName>
            </value>
            <value>
                <fullName>DL PLC Hardware</fullName>
            </value>
            <value>
                <fullName>Do-More</fullName>
            </value>
            <value>
                <fullName>Do-More HSIO</fullName>
            </value>
            <value>
                <fullName>Do-More PID</fullName>
            </value>
            <value>
                <fullName>Do-More Software</fullName>
            </value>
            <value>
                <fullName>Drives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>