unpackaged/main/default/objects/Case/fields/Product_Search__c.field-meta.xml
<CustomField>
    <fullName>Product_Search__c</fullName>
    <label>Product Search</label>
    <length>50</length>
    <type>Text</type>
</CustomField>