unpackaged/main/default/objects/Case/fields/Product_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Text__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>