unpackaged/main/default/objects/Case/fields/Queue_Names__c.field-meta.xml
<CustomField>
    <fullName>Queue_Names__c</fullName>
    <label>Queue Names</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Queues_Names</valueSetName>
    </valueSet>
</CustomField>