unpackaged/main/default/objects/Case/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Serial Number</description>
    <label>Serial Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>