unpackaged/main/default/objects/Case/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>This is used by Tech Support so that they can  search on description.  Current description field is too large.</description>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>