unpackaged/main/default/objects/Case/fields/Short_Solution__c.field-meta.xml
<CustomField>
    <fullName>Short_Solution__c</fullName>
    <description>The first 255 Characters of Solution, so that Tech and fuel can do searches</description>
    <label>Short Solution</label>
    <type>TextArea</type>
</CustomField>