unpackaged/main/default/objects/Case/fields/Showstopper__c.field-meta.xml
<CustomField>
    <fullName>Showstopper__c</fullName>
    <description>Indicates where the Product Launch Issue is a showstopper for Production Launch</description>
    <inlineHelpText>Hold the Launch until this is Corrected</inlineHelpText>
    <label>Showstopper?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>