unpackaged/main/default/objects/Case/fields/Silo__c.field-meta.xml
<CustomField>
    <fullName>Silo__c</fullName>
    <description>Silo. Populated based on Part Number selected.</description>
    <label>Silo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Silo</valueSetName>
    </valueSet>
</CustomField>