unpackaged/main/default/objects/Case/fields/Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Software_Version__c</fullName>
    <description>Software Version</description>
    <label>Software Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>