unpackaged/main/default/objects/Case/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>Description of solution provided.</description>
    <label>Solution</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>