unpackaged/main/default/objects/Case/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Used in the Community to identify address of Community User.</description>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>