unpackaged/main/default/objects/Case/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Used in the Community to identify address of Community User.</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>