unpackaged/main/default/objects/Case/fields/Submitted__c.field-meta.xml
<CustomField>
    <fullName>Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a BE Case has been submitted. Referenced in the Submit BE Case flow.</description>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>