unpackaged/main/default/objects/Case/fields/Team_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Team_Ownership__c</fullName>
    <label>Team Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIT</fullName>
            </value>
            <value>
                <fullName>FUEL</fullName>
            </value>
            <value>
                <fullName>CSI</fullName>
            </value>
            <value>
                <fullName>PIM</fullName>
            </value>
            <value>
                <fullName>DOC</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Undetermined/Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>