unpackaged/main/default/objects/Case/fields/Tech_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Tech_Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tech Product Group that is needed when assigning Tech. This will be populated with a Process Builder flow based on Product field.</description>
    <label>Tech Product Group</label>
    <referenceTo>ProfileSkill</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>