unpackaged/main/default/objects/Case/fields/Tech_Support__c.field-meta.xml
<CustomField>
    <fullName>Tech_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Tech Support user that created the case if applicable.</description>
    <label>Tech Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>