unpackaged/main/default/objects/Case/fields/Tech_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Tech_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not Tech Survey has been Sent</description>
    <label>Tech Survey Sent</label>
    <type>Checkbox</type>
</CustomField>