unpackaged/main/default/objects/Case/fields/TechIsMe__c.field-meta.xml
<CustomField>
    <fullName>TechIsMe__c</fullName>
    <description>This will allow to see when a tech owns a case in a listview.</description>
    <formula>IF(Tech_Support__r.Username = $User.Username, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Is Me</label>
    <type>Checkbox</type>
</CustomField>