unpackaged/main/default/objects/Case/fields/Transferred__c.field-meta.xml
<CustomField>
    <fullName>Transferred__c</fullName>
    <description>Marked TRUE if the Created By User is different from the Owner. Used to determine if a Case was transferred. For reporting purposes.</description>
    <formula>OR 
( 
  AND(
    NOT(ISNULL(CRA__c)),
    CRA__c != OwnerId
  ),
  AND(
    ISNULL(CRA__c),
    CreatedById != OwnerId
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transferred</label>
    <type>Checkbox</type>
</CustomField>