unpackaged/main/default/objects/Case/fields/Windows_OS__c.field-meta.xml
<CustomField>
    <fullName>Windows_OS__c</fullName>
    <description>Windows OS</description>
    <label>Windows OS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Windows XP 32 bit</fullName>
            </value>
            <value>
                <fullName>Windows XP 64 bit</fullName>
            </value>
            <value>
                <fullName>Windows 7 32 bit</fullName>
            </value>
            <value>
                <fullName>Windows 7 64 bit</fullName>
            </value>
            <value>
                <fullName>Windows 8</fullName>
            </value>
            <value>
                <fullName>Windows 8.1</fullName>
            </value>
            <value>
                <fullName>Windows 10</fullName>
            </value>
            <value>
                <fullName>Windows 11</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>