unpackaged/main/default/objects/Case/fields/X1st_Email_Repsonse_Time__c.field-meta.xml
<CustomField>
    <fullName>X1st_Email_Repsonse_Time__c</fullName>
    <formula>If(NOT(ISBLANK(X1st_Email_Response__c)),
9 * (
( 5 * FLOOR( ( DATEVALUE( X1st_Email_Response__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( X1st_Email_Response__c ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 9 * ( MOD( X1st_Email_Response__c - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 9 * ( MOD( CreatedDate - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1) ) )
)
)
), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1st Email Repsonse Time in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>