unpackaged/main/default/objects/Case/fields/X1st_Email_Response__c.field-meta.xml
<CustomField>
    <fullName>X1st_Email_Response__c</fullName>
    <inlineHelpText>Captures the First Email Activity Response Date and Time for the Case</inlineHelpText>
    <label>1st Email Response</label>
    <type>DateTime</type>
</CustomField>