unpackaged/main/default/objects/Case/fields/X30_Day_Warning_Notice__c.field-meta.xml
<CustomField>
    <fullName>X30_Day_Warning_Notice__c</fullName>
    <label>30 Day Warning Notice</label>
    <type>DateTime</type>
</CustomField>