unpackaged/main/default/objects/Case/recordTypes/AR.recordType-meta.xml
<RecordType>
    <fullName>AR</fullName>
    <active>true</active>
    <businessProcess>AR</businessProcess>
    <description>AR Record Type</description>
    <label>AR</label>
</RecordType>