unpackaged/main/default/objects/Case/recordTypes/Backline_Escalation_Agency_Approval.recordType-meta.xml
<RecordType>
    <fullName>Backline_Escalation_Agency_Approval</fullName>
    <active>true</active>
    <businessProcess>Backline Escalation</businessProcess>
    <description>Backline Escalation case for Agency Approvals.</description>
    <label>Backline Escalation - Agency Approval</label>
</RecordType>