unpackaged/main/default/objects/Case/recordTypes/Backline_Escalation_Drives_Motion.recordType-meta.xml
<RecordType>
    <fullName>Backline_Escalation_Drives_Motion</fullName>
    <active>true</active>
    <businessProcess>Backline Escalation</businessProcess>
    <description>Backline Escalation case for silos that will use the Drives/Motions form.</description>
    <label>Backline Escalation - Drives/Motion</label>
</RecordType>