unpackaged/main/default/objects/Case/recordTypes/Backline_Escalation_HMI.recordType-meta.xml
<RecordType>
    <fullName>Backline_Escalation_HMI</fullName>
    <active>true</active>
    <businessProcess>Backline Escalation</businessProcess>
    <description>Backline Escalation case for silos that will use the HMI form.</description>
    <label>Backline Escalation - HMI and CLICK PLC</label>
</RecordType>