unpackaged/main/default/objects/Case/recordTypes/Backline_Escalation_PLC.recordType-meta.xml
<RecordType>
    <fullName>Backline_Escalation_PLC</fullName>
    <active>true</active>
    <businessProcess>Backline Escalation</businessProcess>
    <description>Backline Escalation case for silos that will use the PLC form.</description>
    <label>Backline Escalation - PLC</label>
</RecordType>