unpackaged/main/default/objects/Case/recordTypes/Backline_Escalation_Standard.recordType-meta.xml
<RecordType>
    <fullName>Backline_Escalation_Standard</fullName>
    <active>true</active>
    <businessProcess>Backline Escalation</businessProcess>
    <description>Backline Escalation case for silos that will use the Standard form.</description>
    <label>Backline Escalation - Standard</label>
</RecordType>