unpackaged/main/default/objects/Case/recordTypes/Busi_Dev.recordType-meta.xml
<RecordType>
    <fullName>Busi_Dev</fullName>
    <active>true</active>
    <businessProcess>Cases</businessProcess>
    <description>Busi Dev Cases</description>
    <label>Busi Dev</label>
</RecordType>