unpackaged/main/default/objects/Case/recordTypes/Case_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Case_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Cases</businessProcess>
    <description>General Case record type.</description>
    <label>General Case</label>
</RecordType>