unpackaged/main/default/objects/Case/recordTypes/Credit_New_Account.recordType-meta.xml
<RecordType>
    <fullName>Credit_New_Account</fullName>
    <active>true</active>
    <businessProcess>AR</businessProcess>
    <description>Credit New Account</description>
    <label>Credit/New Account</label>
</RecordType>