unpackaged/main/default/objects/Case/recordTypes/Email.recordType-meta.xml
<RecordType>
    <fullName>Email</fullName>
    <active>true</active>
    <businessProcess>Cases</businessProcess>
    <description>Case with No Account or Contact Match. Use for Email and Web Cases.</description>
    <label>Email and Web</label>
</RecordType>