unpackaged/main/default/objects/Case/recordTypes/Orders.recordType-meta.xml
<RecordType>
    <fullName>Orders</fullName>
    <active>true</active>
    <businessProcess>Orders_Inquiries</businessProcess>
    <description>Orders Record type for CSR Orders</description>
    <label>Orders</label>
</RecordType>