unpackaged/main/default/objects/Case/recordTypes/Orders_Inquiries.recordType-meta.xml
<RecordType>
    <fullName>Orders_Inquiries</fullName>
    <active>true</active>
    <businessProcess>Orders_Inquiries</businessProcess>
    <description>Record Type for Customer Support Reps</description>
    <label>Orders/Inquiries</label>
</RecordType>