unpackaged/main/default/objects/Case/recordTypes/Product_Launch_Testing.recordType-meta.xml
<RecordType>
    <fullName>Product_Launch_Testing</fullName>
    <active>true</active>
    <businessProcess>Product Launch</businessProcess>
    <description>Product Launch Testing Record Type</description>
    <label>Product Launch Testing</label>
</RecordType>