unpackaged/main/default/objects/Case/recordTypes/Quote.recordType-meta.xml
<RecordType>
    <fullName>Quote</fullName>
    <active>true</active>
    <businessProcess>Orders_Inquiries</businessProcess>
    <description>Quote Record Type</description>
    <label>Quote</label>
</RecordType>