unpackaged/main/default/objects/Case/recordTypes/RA.recordType-meta.xml
<RecordType>
    <fullName>RA</fullName>
    <active>true</active>
    <businessProcess>Orders_Inquiries</businessProcess>
    <description>For RA Group</description>
    <label>RA</label>
</RecordType>