unpackaged/main/default/objects/Case/recordTypes/SalesTax.recordType-meta.xml
<RecordType>
    <fullName>SalesTax</fullName>
    <active>true</active>
    <businessProcess>AR</businessProcess>
    <description>SalesTax Record type</description>
    <label>SalesTax</label>
</RecordType>