unpackaged/main/default/objects/Case/recordTypes/Update_Info.recordType-meta.xml
<RecordType>
    <fullName>Update_Info</fullName>
    <active>true</active>
    <businessProcess>Cases</businessProcess>
    <label>Update Info</label>
</RecordType>