unpackaged/main/default/objects/Case/recordTypes/Webstore.recordType-meta.xml
<RecordType>
    <fullName>Webstore</fullName>
    <active>true</active>
    <businessProcess>Cases</businessProcess>
    <description>For Webstore Support</description>
    <label>Webstore</label>
</RecordType>